--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
-    <string name="app_name">Solicare Monitor</string>
+    <string name="app_name">Solicare</string>
     <string name="yes">예</string>
     <string name="no">아니오</string>
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
+    <string name="exit_app">앱 종료</string>
+    <string name="permission_required_title">권한 필요</string>
+    <string name="permission_required_message">앱 사용을 위해 필수 권한이 필요합니다. 권한을 허용해 주세요.</string>
+    <string name="permission_required_confirm">확인</string>
+    <string name="permission_required_settings_message">앱 사용을 위해 필수 권한이 필요합니다. 설정에서 권한을 허용해 주세요.</string>
+    <string name="permission_required_settings_button">설정으로 이동</string>
+    <string name="permission_required_retry_message">앱 사용을 위해 권한이 필요합니다.</string>
+    <string name="permission_required_retry_button">다시 시도</string>
 </resources>
