--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="device_register_title">디바이스 등록 요청 결과</string>
     <string name="device_register_success">디바이스 등록 요청에 성공했습니다.</string>
     <string name="device_register_fail">디바이스 등록 요청에 실패했습니다.</string>
+    <string name="device_renew_title">디바이스 갱신 요청 결과</string>
+    <string name="device_renew_success">디바이스 갱신 요청에 성공했습니다.</string>
+    <string name="device_renew_fail">디바이스 갱신 요청에 실패했습니다.</string>
     <string name="device_unregister_title">등록 해제 요청 결과</string>
     <string name="device_unregister_success">디바이스 등록 해제 요청에 성공했습니다.</string>
     <string name="device_unregister_fail">디바이스 등록 해제 요청에 실패했습니다.</string>
